# cram_sherpa_reasoning

cram_sherpa_reasoning/: CMakeLists.txt  package.xml
cram_sherpa_spatial_relations/: CMakeLists.txt  cram-sherpa-spatial-relations.asd  package.xml
cram_sherpa_spatial_relations/src/: cost-functions.lisp  costmap-knowledge.lisp  intern-functions.lisp  intern-functions.lisp~  package.lisp  prolog.lisp  visualization.lisp
