<?xml version="1.0"?>
<package>
  <name>cram_sherpa_spatial_relations</name>
  <version>0.0.0</version>
  <description>The cram_sherpa_spatial_relations package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yazdani@todo.todo">yazdani</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cram_sherpa_spatial_relations</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_location_costmap</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cram_robot_pose_gaussian_costmap</build_depend>
  <build_depend>cl_tf</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>cram_json_prolog</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>hmi_interpreter</build_depend>

  <run_depend>cram_designators</run_depend>
  <run_depend>cram_location_costmap</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cram_robot_pose_gaussian_costmap</run_depend>
  <run_depend>cl_tf</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>cram_json_prolog</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>hmi_interpreter</run_depend>
</package>
